# full-search-jp

./: .gitignore  Cargo.toml  README.md
mecab-ipadic/: dict.da  dict.vals  dict.words  dict.wordsidx  matrix.mtx
src/: main.rs
