[package]
name = "full-search-jp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["serde", "now"] }
lindera = "1.4.1"
lindera-tantivy = "1.1.0"
tantivy = "0.25.0"

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
codegen-units = 1
panic = "abort"
